--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,4 @@
 version: "3"
 services:
   frontend:
-    image: yeasy/simple-web:latest
-    ports:
-      - "3000:80"
+    image: hello-world:latest
